# TFG

./: CMakeLists.txt  README.md  main.cpp
BasicDE/: CMakeLists.txt  individual.cpp  individual.h  line.cpp  line.h  main.cpp  main2.cpp  main3.cpp  main4.cpp
DE_RAM/: CMakeLists.txt  DE.cpp  DE.h  FileReader.h  Individual.cpp  Individual.h  MutationProbabilityTable.h  Population.cpp  Population.h  main.cpp
DE_RAM_CEC14/: CMakeLists.txt  FileReader.h  Individual.cpp  Individual.h  MutationProbabilityTable.cpp  Population.cpp  Population.h  TripletPST.h  armadillo.h  main.cpp
DE_RAM_CEC14/armadillo/9.900.2/lib/: libarmadillo.9.90.2.dylib  libarmadillo.9.dylib
DE_RAM_CEC14_LPSR/: CMakeLists.txt  Individual.cpp  Individual.h  MutationProbabilityTable.cpp  MutationProbabilityTable.h  Population.cpp  Population.h  TableFandCR.h  main.cpp
DE_RAM_CEC14_LPSR/armadillo/9.900.2/share/Armadillo/CMake/: ArmadilloConfig.cmake  ArmadilloLibraryDepends-release.cmake
DE_RAM_JAPDE_CEC14_HSPR/: CMakeLists.txt  Individual.cpp  Individual.h  MutationProbabilityTable.cpp  MutationProbabilityTable.h  Population.cpp  Population.h  TableFandCR.cpp  TableFandCR.h  TripletPST.cpp  TripletPST.h  cec14_test_func.cpp  main.cpp
DE_RAM_JAPDE_CEC14_HSPR/DE codes 2014 benchmark/: cec14_func.mexw64
DE_RAM_JAPDE_CEC14_HSPR/armadillo/9.900.2/lib/pkgconfig/: armadillo.pc
DE_RAM_JAPDE_CEC14_HSPR/armadillo/9.900.2/share/Armadillo/CMake/: ArmadilloLibraryDepends.cmake
DE_RAM_JAPDE_CEC14_LSPR/: CMakeLists.txt  Individual.cpp  Individual.h  MutationProbabilityTable.h  Population.cpp  Population.h  TableFandCR.cpp  TableFandCR.h  TripletPST.cpp  TripletPST.h  main.cpp  test
DE_RAM_JAPDE_CEC14_LSPR/armadillo/9.900.2/: INSTALL_RECEIPT.json
DE_RAM_JAPDE_CEC14_LSPR/armadillo/9.900.2/.brew/: armadillo.rb
DE_RAM_JAPDE_CEC14_LSPR/armadillo/9.900.2/include/armadillo_bits/: config.hpp
Slides_DE/: Lecture 7 - Evolutionary Computation.pptx  bash_script_parametros.sh
try/: CMakeLists.txt
untitled1/: CMakeLists.txt  FileReader.cpp  FileReader.h  Individual.cpp  Individual.h  MutationProbabilityTable.cpp  MutationProbabilityTable.h  Population.cpp  Population.h  TripletPST.cpp  TripletPST.h  main.cpp  main2.cpp  mainp.cpp  mainp2.cpp
